--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h1 class="text">BIENVENIDO</h1>
         <main>
             <div class="buttons-container">
-                <button type="button">Nuevo Video</button>
+                <button type="button" onclick="redirectToAnotherPage()">Nuevo Video</button>
                 <button type="button">Explorar Videos</button>
             </div>
             <!-- Aquí puedes agregar el contenido principal de la página -->
