--- a/src/header.html
+++ b/src/header.html
@@ -12,8 +12,10 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="images/logoStuart.png" alt="Logo Stuart">
-            <img src="images/logoCerela.png" alt="Logo Cerela">
+            <a href="index.html">
+                <img src="images/logoStuart.png" alt="Logo Stuart">
+                <img src="images/logoCerela.png" alt="Logo Cerela">
+            </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Buscar...">
