--- a/src/new_vid.html
+++ b/src/new_vid.html
@@ -14,7 +14,7 @@
     <div class="new-video-page">
         <main>
             <h1>Inserte su Video</h1>
-            <div class="file-upload-container">
+            <div class="file-upload-container" id="file-container">
                 <div class="file-upload-box" id="file-upload-box">
                     <label for="file-input">
                         <span>+</span>
